feat: Partial commit, before reworking the architecture for using a github worker for metrics.
